--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,27 @@
-# Gradle files
-.gradle/
-build/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Log/OS Files
-*.log
-
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
-output.json
-
-# IntelliJ
 *.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
-
-# Keystore files
-*.jks
-*.keystore
-
-# Google Services (e.g. APIs or Firebase)
+.gradle
+.idea
+/local.properties
+/.idea
+/.idea/compiler.xml
+/.idea/misc.xml
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/release
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+/schemas
+# For firebase connection
 google-services.json
-
-# Android Profiling
-*.hprof
+# For google drive api connection
+client_secret.json
+/app/release
+lint-baseline.xml
